# qhyccd-tuis

./: CMakeLists.txt  README.md
CMakeModules/: CPackConfig.cmake  FindQHYCCD.cmake
src/: CMakeLists.txt  WorkerThread.cpp  WorkerThread.hpp  camera_control.cpp  camera_control.hpp  cli_parser.cpp  cli_parser.hpp  cli_test.cpp  image_calibration.cpp  list_cameras.cpp  main.cpp  scale_image.cpp  scale_image.hpp
src/cvfits/: CMakeLists.txt  cvfits.cpp  cvfits.hpp
